fix(workflow): 修复构建工作流中的自动发布逻辑
- 修正了版本标签判断逻辑，确保以'v'开头的标签被正确识别为正式版
- 调整了AUTO变量的赋值顺序，确保自动触发逻辑正确执行
- 更新了JAR文件查找逻辑，支持多层级目录结构下的JAR文件搜索
- 优化了ZIP打包命令，使用find和xargs组合确保所有匹配的JAR文件都被包含
- 在环境变量输出中添加了AUTO标志的显示，便于调试和追踪

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 name: Java Jar To Zip Publish
-run-name: "[${{ (github.event.inputs.push_to_registry == 'true' || github.event.inputs.push_to_github_release == 'true') && '正式版' || '测试版' }}] Jar ${{ github.event.inputs.tag_name || github.ref_name || 'v-manual' }}  version"
+run-name: "[${{ ((github.event.inputs.push_to_registry || github.event.inputs.push_to_github_release) || github.event.inputs.tag_name == 'v*') && '正式版' || '测试版' }}] Jar ${{ github.event.inputs.tag_name || github.ref_name || 'v-manual' }}  version"
 
 on:
   push:
@@ -84,18 +84,21 @@ jobs:
           AUTO=false
           
           TAG_NAME="${{ github.event.inputs.tag_name || github.ref_name }}"
-          # 判断是否为自动触发（TAG_NAME以'v'开头）
-          if [[ "$TAG_NAME" == v* ]]; then
-              AUTO=true
-          fi
-          echo "AUTO=$AUTO" >> $GITHUB_ENV
+
           SKIP_TESTS="${{ github.event.inputs.skip_tests || true }}"
           JAVA_VERSION="${{ github.event.inputs.java_version ||secrets.JAVA_VERSION|| '8' }}"
           JAR_DIR_PREFIX="${{ github.event.inputs.jar_dir_prefix || 'ws-service' }}"
           DRAFT="${{ github.event.inputs.draft || false }}"
           PRERELEASE="${{ github.event.inputs.prerelease || false }}" 
-          PUSH_TO_REGISTRY="${{ github.event.inputs.push_to_registry  || env.AUTO }}"
-          PUSH_TO_GITHUB_RELEASE="${{ github.event.inputs.push_to_github_release  ||  env.AUTO  }}"
+          PUSH_TO_REGISTRY="${{ env.AUTO ||github.event.inputs.push_to_registry }}"
+          PUSH_TO_GITHUB_RELEASE="${{ env.AUTO ||github.event.inputs.push_to_github_release }}"
+                    # 判断是否为自动触发（TAG_NAME以'v'开头）
+          if [[ "$TAG_NAME" == v* ]]; then
+              AUTO=true
+              PUSH_TO_REGISTRY=$AUTO
+              PUSH_TO_GITHUB_RELEASE=$AUTO
+          fi
+          echo "AUTO=$AUTO" >> $GITHUB_ENV
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           echo "SKIP_TESTS=$SKIP_TESTS" >> $GITHUB_ENV
           echo "JAVA_VERSION=$JAVA_VERSION" >> $GITHUB_ENV
@@ -104,7 +107,7 @@ jobs:
           echo "PRERELEASE=$PRERELEASE" >> $GITHUB_ENV
           echo "PUSH_TO_REGISTRY=$PUSH_TO_REGISTRY" >> $GITHUB_ENV
           echo "PUSH_TO_GITHUB_RELEASE=$PUSH_TO_GITHUB_RELEASE" >> $GITHUB_ENV
-          echo "设置的输入值: TAG_NAME=$TAG_NAME, SKIP_TESTS=$SKIP_TESTS, JAVA_VERSION=$JAVA_VERSION, JAR_DIR_PREFIX=$JAR_DIR_PREFIX, DRAFT=$DRAFT, PRERELEASE=$PRERELEASE,PUSH_TO_REGISTRY=$PUSH_TO_REGISTRY,PUSH_TO_GITHUB_RELEASE=$PUSH_TO_GITHUB_RELEASE"
+          echo "设置的输入值: AUTO=$AUTO ,TAG_NAME=$TAG_NAME, SKIP_TESTS=$SKIP_TESTS, JAVA_VERSION=$JAVA_VERSION, JAR_DIR_PREFIX=$JAR_DIR_PREFIX, DRAFT=$DRAFT, PRERELEASE=$PRERELEASE,PUSH_TO_REGISTRY=$PUSH_TO_REGISTRY,PUSH_TO_GITHUB_RELEASE=$PUSH_TO_GITHUB_RELEASE"
 
       - name: 4.验证版本号
         run: |
@@ -153,6 +156,8 @@ jobs:
           else
             echo "匹配的 JAR 文件 (*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar):"
             find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar" || echo "未找到匹配的 JAR 文件"
+            echo "匹配的 JAR 文件 (*/${{ env.JAR_DIR_PREFIX  }}/*/target/*.jar):"
+            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/*/target/*.jar" || echo "未找到匹配的 JAR 文件"  
           fi
 
       - name: 9.打包所有 JAR 文件成 ZIP
@@ -160,7 +165,7 @@ jobs:
           if [ "${{ env.JAR_DIR_PREFIX }}" = "" ]; then
             find . -type f -path "*/target/*.jar" -exec zip -j jars-${{ env.TAG_NAME }}.zip {} +
           else
-            find . -type f -path "*/${{ env.JAR_DIR_PREFIX  }}/target/*.jar" -exec zip -j jars-${{ env.TAG_NAME }}.zip {} +
+            find . -type f \( -path "*/${{ env.JAR_DIR_PREFIX }}/target/*.jar" -o -path "*/${{ env.JAR_DIR_PREFIX }}/*/target/*.jar" \) -print0 | xargs -0 -I {} zip -j "jars-${{ env.TAG_NAME }}.zip" {}
           fi
           # -j: 仅打包文件，不保留目录结构
           # +: 尽量将多个文件放入一个 zip 命令，减少调用次数
