--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -367,7 +367,7 @@ jobs:
 
       - name: 14. 上传到 GitHub Release（包含独立 EXE 包）
         uses: softprops/action-gh-release@v2
-        if: ${{ inputs.push_to_github_release == true }}
+        if: ${{ env.PUSH_TO_GITHUB_RELEASE == true }}
         with:
           name: ${{ env.TAG_NAME }}
           tag_name: ${{ env.TAG_NAME }}
