fix(workflow): 修复工作流触发条件判断逻辑
- 修正了 run-name 中的版本类型判断条件，确保推送事件正确识别为正式版
- 更新了 GitHub Release 上传步骤的触发条件，支持推送事件和手动触发
- 修复了 Docker 镜像验证步骤的条件判断，确保推送逻辑正确执行

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 name: Java Jar To Zip Publish
-run-name: "[${{ ((github.event.inputs.push_to_registry || github.event.inputs.push_to_github_release) || github.event.inputs.tag_name == 'v*') && '正式版' || '测试版' }}] Jar ${{ github.event.inputs.tag_name || github.ref_name || 'v-manual' }}  version"
+run-name: "[${{ (github.event_name == 'push' || ((github.event.inputs.push_to_registry || github.event.inputs.push_to_github_release) == true)) && '正式版' || '测试版' }}] Jar ${{ github.event.inputs.tag_name || github.ref_name || 'v-manual' }}  version"
 
 on:
   push:
@@ -367,7 +367,7 @@ jobs:
 
       - name: 14. 上传到 GitHub Release（包含独立 EXE 包）
         uses: softprops/action-gh-release@v2
-        if: ${{ env.PUSH_TO_GITHUB_RELEASE == true }}
+        if: ${{ github.event_name == 'push' || inputs.push_to_github_release == true }}
         with:
           name: ${{ env.TAG_NAME }}
           tag_name: ${{ env.TAG_NAME }}
@@ -478,7 +478,7 @@ jobs:
       - name: Verify Docker image
         run: |
           docker images
-          if [ "${{ inputs.push_to_registry == true }}" ]; then
+          if [ "${{ github.event_name == 'push' || inputs.push_to_registry == true }}" ]; then
             echo "Docker image pushed successfully"
           else
             echo "Docker image built locally only"
